perf($Java): upgrade Java (Temurin) to 17.0.2+8
upgrade Java (Temurin) to 17.0.2+8
https://github.com/adoptium/temurin17-binaries/releases/tag/jdk-17.0.2%2B8

BREAKING CHANGE: upgrade Java (Temurin) to 17.0.2+8